--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:prod": "cross-env-shell NODE_ENV=production && nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "parcel-build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "vercel-build": "echo hello"
   },
   "author": "Light",
