--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pug": "^2.0.4",
     "sharp": "^0.32.5",
     "slugify": "^1.6.6",
+    "stripe": "^13.6.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.4"
   },
