--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start:prod": "cross-env-shell NODE_ENV=production && nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "parcel build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "vercel-build": "echo hello"
+    "parcel build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Light",
   "license": "ISC",
@@ -19,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
