--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.9.0",
+    "hanko-sdk": "^1.0.2",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.1",
+    "jwks-rsa": "^3.1.0",
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
