--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "natours",
   "version": "1.0.0",
-  "description": "Learning node, express and mongoDB",
+  "description": "Natours",
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
